fix text shift issue on info drop box and more area for the pop up when user hovers over the icon

--- a/app/components/comparison-bar/comparison-bar.component.less
+++ b/app/components/comparison-bar/comparison-bar.component.less
@@ -15,7 +15,7 @@
 
   &-capsule{
     background-color: @highlightGrey;
-    border: 1px solid #d7d7d7;
+    border: 1px solid @backgroundGrey;
     border-radius: 15px;
     height: 15px;
     margin-top: 2px;
@@ -31,7 +31,7 @@
       position: absolute;
       transition: 1s width;
       -webkit-transition: 1s width;
-      border-right: 1px solid #d7d7d7;
+      border-right: 1px solid @backgroundGrey;
 
       &.stroke-top{
         z-index: 5;
@@ -80,13 +80,13 @@
     }
     .fa-sort-up{
       color: @white;
-      display: none;
+      visibility: hidden;
       font-size: 16px;
       padding: 5px 0;
       text-align: center;
       z-index: 6;
       &.active{
-        display: block;
+        visibility: visible;
       }
     }
   }
@@ -103,7 +103,7 @@
       font-size: 30px;
     }
     &.active{
-      display: block;
+      display: inline-block;
     }
   }
 
